docs: update server_configurations.md skip-checks: true